# CubeSatDynamicEnvImprovement

./: .gitignore  DTR.py  DataBase.py  LICENSE  OBC_technologies.csv  README.md  Rk4_orbit_apogee.py  Rk4_orbit_basic.py  battery_technologies.csv  communication_technologies.csv  compute_score.py  cubesat_mission.py  cubesat_simulator.py  earth_rot.py  gen_dataset.py  gen_dataset_al.py  main.py  orbit_stochastic.py  predictors.py  predictors_stats.py  pyproject.toml  radiator_technologies.csv  solar_array_technologies.csv  test_compute_score.py  test_simulator.py
Benchmark-AL-Mat/: LICENSE  README.md  requirements.txt
Benchmark-AL-Mat/dataset/: meta.csv
Benchmark-AL-Mat/src/: main.py  run_active_learning.py
Benchmark-AL-Mat/src/strategies/: EMCM.py  GSBAG.py  LL4AL.py  QDD.py  RDALR.py  RDEMCM.py  RDGS.py  RDQBC.py  __init__.py  bmdal.py  egal.py  gaussianprocess.py  gsi.py  gsx.py  gsy.py  mcd.py  qbc.py  randomsearch.py  tree.py  tree_diversity.py  tree_representativity.py  treebased_diversity.py  treebased_diversity_self.py  treebased_representativity.py  treebased_representativity_self.py
Benchmark-AL-Mat/src/strategies/utils_models/: LL4AL_model.py
Benchmark-AL-Mat/src/utils/: __init__.py  active_learner.py  dataset_process.py  initialize.py
manuscripts/: active_learning.md  cubesat_architecting_rl.md  manuscript.md
outputs/: satellite_config_scores_al_15orbits.csv  satellite_config_scores_al_15orbits_checkpoint.csv  satellite_config_scores_al_8orbits.csv  satellite_config_scores_al_8orbits_checkpoint.csv  satellite_config_scores_multi_original.csv
(+5 files in other folders)
