[project]
name = "cubesatdynamicenvimprovement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
    "pytest>=8.4.2",
    "xgboost>=3.1.0",
    "torch>=2.11.0",
    "dill>=0.4.1",
    "baal>=2.1.0",
]
